@@ -7526,7 +7526,7 @@ http://www.htdig.org/
 			<em>default:</em>
 		  </dt>
 		  <dd>
-			${<a href="#maximum_pages">maximum_pages</a>}
+			10
 		  </dd>
 		  <dt>
 			<em>block:</em>
@@ -7546,11 +7546,11 @@ http://www.htdig.org/
 		  <dd>
 	This value limits the number of page links that will be
 	included in the page list at the bottom of the search
-	results page. By default, it takes on the value of the
-	<a href="#maximum_pages">maximum_pages</a>
-	attribute, but you can set it to something lower to allow
-	more pages than buttons. In this case, pages above this
-	number will have no corresponding button.
+	results page. If there are more pages than buttons, the actual
+	page links will be a sliding window centred around the current
+	page. If icons are provided by
+	<a href="page_number_text">page_number_text</a>, then the maximum
+	number of icons may limit the number of buttons actually displayed.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -7562,7 +7562,7 @@ http://www.htdig.org/
 				  maximum_page_buttons:
 				</td>
 				<td nowrap>
-				     20
+				     ${maximum_pages}
 				</td>
 			  </tr>
 			</table>
@@ -7594,7 +7594,7 @@ http://www.htdig.org/
 			<em>default:</em>
 		  </dt>
 		  <dd>
-			10
+			10000
 		  </dd>
 		  <dt>
 			<em>block:</em>
@@ -8634,7 +8634,7 @@ http://www.htdig.org/
 			<em>default:</em>
 		  </dt>
 		  <dd>
-			<em>No default</em>
+			&quot;&lt;strong&gt;%d&lt;/strong&gt;&quot;
 		  </dd>
 		  <dt>
 			<em>block:</em>
@@ -8652,22 +8652,7 @@ http://www.htdig.org/
 			<em>description:</em>
 		  </dt>
 		  <dd>
-	The text strings in this list will be used when putting
-	together the PAGELIST variable, for use in templates or
-	the <a href="#search_results_footer">search_results_footer</a>
-	file, when search results fit on more than page. The PAGELIST
-	is the list of links at the bottom of the search results page.
-	There should be as many strings in the list as there are
-	pages allowed by the <a href="#maximum_page_buttons">maximum_page_buttons</a>
-	attribute. If there are not enough, or the list is empty,
-	the page numbers alone will be used as the text for the links.
-	An entry from this list is used for the current page, as the
-	current page is shown in the page list without a hypertext link,
-	while entries from the <a href="#page_number_text">
-	page_number_text</a> list are used for the links to other pages.
-	The text strings can contain HTML tags to highlight page numbers
-	or embed images. The strings need to be quoted if they contain
-	spaces.
+	See <a href="#page_number_text">page_number_text</a>.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -9250,7 +9235,7 @@ http://www.htdig.org/
 			<em>default:</em>
 		  </dt>
 		  <dd>
-			<em>No default</em>
+			&quot;&lt;em&gt;%d&lt;/em&gt;&quot; 1000
 		  </dd>
 		  <dt>
 			<em>block:</em>
@@ -9272,11 +9257,23 @@ http://www.htdig.org/
 	together the PAGELIST variable, for use in templates or
 	the <a href="#search_results_footer">search_results_footer</a>
 	file, when search results fit on more than page. The PAGELIST
-	is the list of links at the bottom of the search results page.
-	There should be as many strings in the list as there are
-	pages allowed by the <a href="#maximum_page_buttons">maximum_page_buttons</a>
-	attribute. If there are not enough, or the list is empty,
-	the page numbers alone will be used as the text for the links.
+	is the list of links at the bottom of the search results page. <br>
+	As of 3.2.0rc1, the usual form is a list of one, two or three strings.
+	<ul>
+	<li> The first string contains a template with "%d" as a place-holder
+	for the page number.  (One to four such place-holders can be used.)
+	This template will typically be an &lt;img&gt; tag, with a different
+	image for each page.</li>
+	<li> The second string (an integer) specifies the number of such
+	images available to be used. </li>
+	<li> The third parameter specifies an alternative template to be used
+	for page numbers larger than the second parameter.  If this is not
+	specified, plain text is used. </li>
+	</ul>
+	Alternatively, and for previous versions of ht://Dig, there can be a
+	list of explicit strings to be used
+	as text for the links.  If there are not enough, or the list is empty,
+	the page numbers alone will be used as the text for the links. <br>
 	Entries from this list are used for the links to other pages,
 	while an entry from the <a href="#no_page_number_text">
 	no_page_number_text</a> list is used for the current page, as the
@@ -14601,6 +14598,6 @@ form during indexing and translated for results.
 	  </dd>
 	</dl>
 	<hr>
-		Last modified: Sat Jun 12 23:26:34 EST 2004
+		Last modified: Sat Jun 19 11:05:03 EST 2004
   </body>
 </html>
