@@ -159,30 +159,12 @@ next_page_text:		<img src="@IMAGEDIR@/buttonr.gif" border="0" align="middle" wid
 no_next_page_text:
 prev_page_text:		<img src="@IMAGEDIR@/buttonl.gif" border="0" align="middle" width="30" height="30" alt="prev">
 no_prev_page_text:
-page_number_text:	'<img src="@IMAGEDIR@/button1.gif" border="0" align="middle" width="30" height="30" alt="1">' \
-			'<img src="@IMAGEDIR@/button2.gif" border="0" align="middle" width="30" height="30" alt="2">' \
-			'<img src="@IMAGEDIR@/button3.gif" border="0" align="middle" width="30" height="30" alt="3">' \
-			'<img src="@IMAGEDIR@/button4.gif" border="0" align="middle" width="30" height="30" alt="4">' \
-			'<img src="@IMAGEDIR@/button5.gif" border="0" align="middle" width="30" height="30" alt="5">' \
-			'<img src="@IMAGEDIR@/button6.gif" border="0" align="middle" width="30" height="30" alt="6">' \
-			'<img src="@IMAGEDIR@/button7.gif" border="0" align="middle" width="30" height="30" alt="7">' \
-			'<img src="@IMAGEDIR@/button8.gif" border="0" align="middle" width="30" height="30" alt="8">' \
-			'<img src="@IMAGEDIR@/button9.gif" border="0" align="middle" width="30" height="30" alt="9">' \
-			'<img src="@IMAGEDIR@/button10.gif" border="0" align="middle" width="30" height="30" alt="10">'
+page_number_text:	'<img src="@IMAGEDIR@/button%d.gif" border="0" align="middle" width="30" height="30" alt="%d">' 10 '<em>%d</em>'
 #
 # To make the current page stand out, we will put a border around the
 # image for that page.
 #
-no_page_number_text:	'<img src="@IMAGEDIR@/button1.gif" border="2" align="middle" width="30" height="30" alt="1">' \
-			'<img src="@IMAGEDIR@/button2.gif" border="2" align="middle" width="30" height="30" alt="2">' \
-			'<img src="@IMAGEDIR@/button3.gif" border="2" align="middle" width="30" height="30" alt="3">' \
-			'<img src="@IMAGEDIR@/button4.gif" border="2" align="middle" width="30" height="30" alt="4">' \
-			'<img src="@IMAGEDIR@/button5.gif" border="2" align="middle" width="30" height="30" alt="5">' \
-			'<img src="@IMAGEDIR@/button6.gif" border="2" align="middle" width="30" height="30" alt="6">' \
-			'<img src="@IMAGEDIR@/button7.gif" border="2" align="middle" width="30" height="30" alt="7">' \
-			'<img src="@IMAGEDIR@/button8.gif" border="2" align="middle" width="30" height="30" alt="8">' \
-			'<img src="@IMAGEDIR@/button9.gif" border="2" align="middle" width="30" height="30" alt="9">' \
-			'<img src="@IMAGEDIR@/button10.gif" border="2" align="middle" width="30" height="30" alt="10">'
+no_page_number_text:	'<img src="@IMAGEDIR@/button%d.gif" border="2" align="middle" width="30" height="30" alt="%d">' 10 '<strong>%d</strong>'
 
 # local variables:
 # mode: text
